--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn sass:build && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass:build": "sass - update src/styles/scss:src/styles/css",
+    "sass": "sass --watch src/styles/scss:src/styles/css"
   }
 }
