--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "reactjams",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://brooksmarka.github.io/reactjams",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -13,9 +12,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
